--- a/history/foreign/accounts.html
+++ b/history/foreign/accounts.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Tropes about Indian culture 🏜️</title>
@@ -228,7 +228,7 @@ Some Hindu king had perished at the hand of an enemy of his who had marched agai
 </p>
 
 <p>
-<a href="/img/foreign/debate.png">img/foreign/debate.png</a>
+<img src="/img/foreign/debate.png" alt="debate.png" />
 </p>
 <div id="outline-container-re-medieval-revivals-in-the-west" class="outline-2">
 <h2 id="re-medieval-revivals-in-the-west"><span class="section-number-2">1.</span> Re: Medieval Revivals in the West</h2>
@@ -281,7 +281,7 @@ Kshatriyas becoming Brahmins Brahmanda Purana 3.66:86a-90
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
