--- a/history/foreign/axial.html
+++ b/history/foreign/axial.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Early Iron Age Indian influences on the Middle-East 🏗️</title>
@@ -245,7 +245,7 @@ I have long found issue with the mainstream theory of the origin of Brahmi [cont
 </p>
 
 <p>
-<a href="/img/foreign/phoenician.jpg">img/foreign/phoenician.jpg</a>
+<img src="/img/foreign/phoenician.jpg" alt="phoenician.jpg" />
 </p>
 
 <p>
@@ -257,7 +257,7 @@ This leads me to believe that the Brahmi script was developed with knowledge of 
 </p>
 
 <p>
-<a href="/img/foreign/lipi.jpg">img/foreign/lipi.jpg</a>
+<img src="/img/foreign/lipi.jpg" alt="lipi.jpg" />
 </p>
 
 <p>
@@ -354,7 +354,7 @@ In the 9th century BC, the Iranians started migrating into Iran proper. They wer
 </p>
 
 <p>
-<a href="/img/xatramaps/silkrd_west.png">img/xatramaps/silkrd_west.png</a>
+<img src="/img/xatramaps/silkrd_west.png" alt="silkrd_west.png" />
 </p>
 
 <p>
@@ -362,7 +362,7 @@ Meanwhile still in the Eastern lands, a magus named Zoroaster formed his own sec
 </p>
 
 <p>
-<a href="/img/foreign/airyanem_vaejah.png">img/foreign/airyanem_vaejah.png</a>
+<img src="/img/foreign/airyanem_vaejah.png" alt="airyanem_vaejah.png" />
 </p>
 
 <p>
@@ -410,7 +410,7 @@ Now Balhika Prātipīya, the Kauravya king, heard people say, &ldquo;There is th
 </p>
 
 <p>
-<a href="/img/foreign/kauravya.jpg">img/foreign/kauravya.jpg</a>
+<img src="/img/foreign/kauravya.jpg" alt="kauravya.jpg" />
 <i>Kauravya was an ancient gotra</i>
 </p>
 
@@ -423,7 +423,7 @@ A point of confusion I want to pre-emptively avoid: it is true that Balhika/Vahi
 </p>
 
 <p>
-<a href="/img/foreign/indic_maharashtra.png">img/foreign/indic_maharashtra.png</a>
+<img src="/img/foreign/indic_maharashtra.png" alt="indic_maharashtra.png" />
 </p>
 
 <p>
@@ -431,7 +431,7 @@ I briefly considered that there may have also been some early incursions from th
 </p>
 
 <p>
-<a href="/img/foreign/explorers.png">img/foreign/explorers.png</a>
+<img src="/img/foreign/explorers.png" alt="explorers.png" />
 </p>
 
 <hr />
@@ -544,7 +544,7 @@ From those ashes rose the Phoenicians &#x2013; a maritime mercantile people who 
 </p>
 
 <p class="footpara">
-<a href="/img/foreign/27scripts.jpg">img/foreign/27scripts.jpg</a>
+<img src="/img/foreign/27scripts.jpg" alt="27scripts.jpg" />
 </p>
 
 <p class="footpara">
@@ -564,7 +564,7 @@ In terms of writing, though, the mainstream narrative is that the Brahmi script 
 </p>
 
 <p class="footpara">
-<a href="/img/foreign/anuradhapura.png">img/foreign/anuradhapura.png</a>
+<img src="/img/foreign/anuradhapura.png" alt="anuradhapura.png" />
 </p></div></div>
 
 <div class="footdef"><sup><a id="fn.vii" class="footnum" href="#fnr.vii" role="doc-backlink">7</a></sup> <div class="footpara" role="doc-footnote"><p class="footpara">
@@ -908,7 +908,7 @@ You also have the Nuristani people, who inhabit the same region &#x2013; they we
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
