--- a/history/hinduism/theology.html
+++ b/history/hinduism/theology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Early Vedic society and theological developments 🏗️</title>
@@ -338,7 +338,7 @@ All the aforementioned groups mentioned lived in the same geographic region as t
 </p>
 
 <p>
-<a href="/img/language families today.png">img/language families today.png</a>
+<img src="/img/language families today.png" alt="language families today.png" />
 </p>
 
 <p>
@@ -412,7 +412,7 @@ Are related, and that the tribe is of Austro-asiatic, i.e. &ldquo;Para-Munda&rd
 </p>
 
 <p>
-<a href="/img/snippetry/archaeological cultures.png">img/snippetry/archaeological cultures.png</a>
+<img src="/img/snippetry/archaeological cultures.png" alt="archaeological cultures.png" />
 </p>
 
 <p>
@@ -648,7 +648,7 @@ Sources that aren&rsquo;t important enough to be fully described inline; i.e. b
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
