--- a/history/old/political_history.html
+++ b/history/old/political_history.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>A political history of premodern India (1200 BC - 1756)</title>
@@ -247,7 +247,7 @@ The political system of Bronze Age India was probably a plutocracy.
 </p>
 
 <p>
-<a href="/img/stock photos/fd145eb4b13659aca0f8b81b268bce37_MD5.png">img/stock photos/fd145eb4b13659aca0f8b81b268bce37_MD5.png</a>
+<img src="/img/stock photos/fd145eb4b13659aca0f8b81b268bce37_MD5.png" alt="fd145eb4b13659aca0f8b81b268bce37_MD5.png" />
 </p>
 
 <p>
@@ -295,7 +295,7 @@ In India, while Vedic literature only mentions the drying of the Sarasvati river
 </p>
 
 <p>
-<a href="/img/stock photos/f9d1d7429910122b9282a17bebf079d8_MD5.png">img/stock photos/f9d1d7429910122b9282a17bebf079d8_MD5.png</a>
+<img src="/img/stock photos/f9d1d7429910122b9282a17bebf079d8_MD5.png" alt="f9d1d7429910122b9282a17bebf079d8_MD5.png" />
 </p>
 
 <p>
@@ -307,7 +307,7 @@ For years to come, the Late Bronze Age collapse inspired the pessimistic myth of
 </p>
 
 <p>
-<a href="/img/stock photos/24a6ee01881f94b3b78648ddfb669cc4_MD5.png">img/stock photos/24a6ee01881f94b3b78648ddfb669cc4_MD5.png</a>
+<img src="/img/stock photos/24a6ee01881f94b3b78648ddfb669cc4_MD5.png" alt="24a6ee01881f94b3b78648ddfb669cc4_MD5.png" />
 </p>
 
 <p>
@@ -323,7 +323,7 @@ Iron smelting was simultaneously invented in India and by the Hittites, and spre
 </p>
 
 <p>
-<a href="/img/stock photos/14787c509d4e4100e20009f4ae691a86_MD5.png">img/stock photos/14787c509d4e4100e20009f4ae691a86_MD5.png</a>
+<img src="/img/stock photos/14787c509d4e4100e20009f4ae691a86_MD5.png" alt="14787c509d4e4100e20009f4ae691a86_MD5.png" />
 </p>
 
 <p>
@@ -335,7 +335,7 @@ This radical change in the way of thought about social organization occurred in 
 </p>
 
 <p>
-<a href="/img/stock photos/879a62c0bcc131da75855193c6343e4c_MD5.png">img/stock photos/879a62c0bcc131da75855193c6343e4c_MD5.png</a>
+<img src="/img/stock photos/879a62c0bcc131da75855193c6343e4c_MD5.png" alt="879a62c0bcc131da75855193c6343e4c_MD5.png" />
 </p>
 
 <p>
@@ -359,7 +359,7 @@ Ancient India as we know it was born.
 </p>
 
 <p>
-<a href="/img/stock photos/d763a3c1935720a7e19db562e1f7c5e2_MD5.png">img/stock photos/d763a3c1935720a7e19db562e1f7c5e2_MD5.png</a>
+<img src="/img/stock photos/d763a3c1935720a7e19db562e1f7c5e2_MD5.png" alt="d763a3c1935720a7e19db562e1f7c5e2_MD5.png" />
 </p>
 
 <p>
@@ -383,7 +383,7 @@ Republics also became commonplace, alongside monarchies, during the Middle Iron 
 </p>
 
 <p>
-<a href="/img/stock photos/f51d61e4436df5420f31fd0889122c65_MD5.png">img/stock photos/f51d61e4436df5420f31fd0889122c65_MD5.png</a>
+<img src="/img/stock photos/f51d61e4436df5420f31fd0889122c65_MD5.png" alt="f51d61e4436df5420f31fd0889122c65_MD5.png" />
 </p>
 </div>
 </div>
@@ -395,7 +395,7 @@ The Late Iron Age begins with the coronation of Ajatashatru of Magadha. In the 5
 </p>
 
 <p>
-<a href="/img/stock photos/574ffb2d208622a9c1cde7c1379ad268_MD5.png">img/stock photos/574ffb2d208622a9c1cde7c1379ad268_MD5.png</a>
+<img src="/img/stock photos/574ffb2d208622a9c1cde7c1379ad268_MD5.png" alt="574ffb2d208622a9c1cde7c1379ad268_MD5.png" />
 </p>
 
 <p>
@@ -403,7 +403,7 @@ Ajatashatru was a brilliant inventor, who created several military contraptions 
 </p>
 
 <p>
-<a href="/img/stock photos/9f97178deb2f362941aa5ee50dfea48f_MD5.png">img/stock photos/9f97178deb2f362941aa5ee50dfea48f_MD5.png</a>
+<img src="/img/stock photos/9f97178deb2f362941aa5ee50dfea48f_MD5.png" alt="9f97178deb2f362941aa5ee50dfea48f_MD5.png" />
 </p>
 
 <p>
@@ -419,7 +419,7 @@ Meanwhile the kingdom of Anga in modern-day Bengal/eastern Bihar transformed int
 </p>
 
 <p>
-<a href="/img/stock photos/c80e3cfe8c4537c06255d5b0a2137c07_MD5.png">img/stock photos/c80e3cfe8c4537c06255d5b0a2137c07_MD5.png</a>
+<img src="/img/stock photos/c80e3cfe8c4537c06255d5b0a2137c07_MD5.png" alt="c80e3cfe8c4537c06255d5b0a2137c07_MD5.png" />
 </p>
 </div>
 </div>
@@ -431,7 +431,7 @@ The history of Classical India begins with the polymath Chanakya: father of econ
 </p>
 
 <p>
-<a href="/img/stock photos/8a718dba229fc30d35d2e2dc3b56b86f_MD5.png">img/stock photos/8a718dba229fc30d35d2e2dc3b56b86f_MD5.png</a>
+<img src="/img/stock photos/8a718dba229fc30d35d2e2dc3b56b86f_MD5.png" alt="8a718dba229fc30d35d2e2dc3b56b86f_MD5.png" />
 </p>
 
 <p>
@@ -460,7 +460,7 @@ The precise sequence of events that lead to the establishment of the Maurya Dyna
 </ul>
 
 <p>
-<a href="/img/stock photos/43f8a57f1ca07662f20234eeb2730f19_MD5.png">img/stock photos/43f8a57f1ca07662f20234eeb2730f19_MD5.png</a>
+<img src="/img/stock photos/43f8a57f1ca07662f20234eeb2730f19_MD5.png" alt="43f8a57f1ca07662f20234eeb2730f19_MD5.png" />
 </p>
 
 <p>
@@ -501,7 +501,7 @@ The late period of the Mauryan dynasty, starting with the coronation of Ashoka t
 </ul>
 
 <p>
-<a href="/img/stock photos/a035e718f89bbaf8c1ddf03952c659e7_MD5.png">img/stock photos/a035e718f89bbaf8c1ddf03952c659e7_MD5.png</a>
+<img src="/img/stock photos/a035e718f89bbaf8c1ddf03952c659e7_MD5.png" alt="a035e718f89bbaf8c1ddf03952c659e7_MD5.png" />
 </p>
 
 <p>
@@ -533,7 +533,7 @@ Next came the Scythians c. 80 BC, who plundered the western country-side and br
 </p>
 
 <p>
-<a href="/img/stock photos/9393869ca0050420f455c8b6802e899a_MD5.png">img/stock photos/9393869ca0050420f455c8b6802e899a_MD5.png</a>
+<img src="/img/stock photos/9393869ca0050420f455c8b6802e899a_MD5.png" alt="9393869ca0050420f455c8b6802e899a_MD5.png" />
 </p>
 
 <p>
@@ -557,7 +557,7 @@ Meanwhile, the more peaceful South had risen as the center of worldwide trade an
 </p>
 
 <p>
-<a href="/img/stock photos/872264b18ccf0937e8771d8ffaf08acf_MD5.png">img/stock photos/872264b18ccf0937e8771d8ffaf08acf_MD5.png</a>
+<img src="/img/stock photos/872264b18ccf0937e8771d8ffaf08acf_MD5.png" alt="872264b18ccf0937e8771d8ffaf08acf_MD5.png" />
 </p>
 
 <p>
@@ -577,7 +577,7 @@ The Gupta period saw significant advances in mathematics, astronomy and metallur
 </p>
 
 <p>
-<a href="/img/stock photos/a4f6e678e7f8a5a7201ff89d5f40b8f2_MD5.png">img/stock photos/a4f6e678e7f8a5a7201ff89d5f40b8f2_MD5.png</a>
+<img src="/img/stock photos/a4f6e678e7f8a5a7201ff89d5f40b8f2_MD5.png" alt="a4f6e678e7f8a5a7201ff89d5f40b8f2_MD5.png" />
 </p>
 
 <p>
@@ -617,7 +617,7 @@ In the North-West, Arab invasions slowly expanded Islamic influence in the Pakis
 </p>
 
 <p>
-<a href="/img/stock photos/6baab6716ddfbedc8b097fb5be815eec_MD5.png">img/stock photos/6baab6716ddfbedc8b097fb5be815eec_MD5.png</a>
+<img src="/img/stock photos/6baab6716ddfbedc8b097fb5be815eec_MD5.png" alt="6baab6716ddfbedc8b097fb5be815eec_MD5.png" />
 </p>
 
 <p>
@@ -629,7 +629,7 @@ In the Tamil country in the far South, the Chola empire overthrew the reigning P
 </p>
 
 <p>
-<a href="/img/stock photos/2a5aee2012c76b25d3a05050f6dedc6b_MD5.png">img/stock photos/2a5aee2012c76b25d3a05050f6dedc6b_MD5.png</a>
+<img src="/img/stock photos/2a5aee2012c76b25d3a05050f6dedc6b_MD5.png" alt="2a5aee2012c76b25d3a05050f6dedc6b_MD5.png" />
 </p>
 
 <p>
@@ -653,7 +653,7 @@ Cities were razed; universities, libraries and temples were burned; high taxes a
 </p>
 
 <p>
-<a href="/img/stock photos/1bb014ea7667a9a88f3ee3220549d2b5_MD5.png">img/stock photos/1bb014ea7667a9a88f3ee3220549d2b5_MD5.png</a>
+<img src="/img/stock photos/1bb014ea7667a9a88f3ee3220549d2b5_MD5.png" alt="1bb014ea7667a9a88f3ee3220549d2b5_MD5.png" />
 </p>
 
 <p>
@@ -699,7 +699,7 @@ The Marathas under Shivaji, who initially scored his victories through guerilla 
 </p>
 
 <p>
-<a href="/img/stock photos/0281ad395cbbc6150ea76131b405a33e_MD5.png">img/stock photos/0281ad395cbbc6150ea76131b405a33e_MD5.png</a>
+<img src="/img/stock photos/0281ad395cbbc6150ea76131b405a33e_MD5.png" alt="0281ad395cbbc6150ea76131b405a33e_MD5.png" />
 </p>
 
 <p>
@@ -710,7 +710,7 @@ The Maratha Empire reduced the excessive bureaucratic overhead that had been int
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
