--- a/xeet/announcements/xatra.html
+++ b/xeet/announcements/xatra.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>xatra</title>
@@ -217,9 +217,9 @@ To use, just run <code>pip install xatra</code>.
 </p>
 
 <p>
-<a href="/img/xatra/india.png">img/xatra/india.png</a>
-<a href="/img/xatra/silkrd.png">img/xatra/silkrd.png</a>
-<a href="/img/xatra/indosphere.png">img/xatra/indosphere.png</a>
+<img src="/img/xatra/india.png" alt="india.png" />
+<img src="/img/xatra/silkrd.png" alt="silkrd.png" />
+<img src="/img/xatra/indosphere.png" alt="indosphere.png" />
 </p>
 
 <hr />
@@ -229,7 +229,7 @@ The idea is you specify a map by a list of &ldquo;flags&rdquo;: declarations tha
 </p>
 
 <p>
-<a href="/img/xatra/code.png">img/xatra/code.png</a>
+<img src="/img/xatra/code.png" alt="code.png" />
 </p>
 
 <hr />
@@ -253,15 +253,15 @@ Besides my followers, might be of interest to: ?? (????), ?? (a) ?? (a) ?? (a) ?
 </p>
 
 <p>
-<a href="/img/xatra/code.png">img/xatra/code.png</a>
-<a href="/img/xatra/indosphere.png">img/xatra/indosphere.png</a>
+<img src="/img/xatra/code.png" alt="code.png" />
+<img src="/img/xatra/indosphere.png" alt="indosphere.png" />
 </p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
