--- a/xeet/announcements/toolkit.html
+++ b/xeet/announcements/toolkit.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>official party line</title>
@@ -236,11 +236,11 @@ or this guy citing LW quack science to call himself genetically inferior:
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240401212455.png">img/retardation/Pasted image 20240401212455.png</a>
+<img src="/img/retardation/Pasted image 20240401212455.png" alt="Pasted image 20240401212455.png" />
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240401212916.png">img/retardation/Pasted image 20240401212916.png</a>
+<img src="/img/retardation/Pasted image 20240401212916.png" alt="Pasted image 20240401212916.png" />
 </p>
 
 <hr />
@@ -258,17 +258,17 @@ You&rsquo;re not going to &ldquo;exploit white guilt&rdquo;. &ldquo;White guilt&
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240401213527.png">img/retardation/Pasted image 20240401213527.png</a>
+<img src="/img/retardation/Pasted image 20240401213527.png" alt="Pasted image 20240401213527.png" />
 </p>
 
 <hr />
 
 <p>
-All this sort of argument accomplishes &#x2014; REEEing about &ldquo;Abrahamic&rdquo;, &ldquo;colonialism&rdquo;, &ldquo;Hinduism most progressive religion&rdquo; &#x2014; is that you lose every value you&rsquo;re fighting for, become a loser, and make yourself look like a pvssy in the process. <a href="/img/retardation/GKFNo1XWkAAHieo 1.jpeg">img/retardation/GKFNo1XWkAAHieo 1.jpeg</a>
+All this sort of argument accomplishes &#x2014; REEEing about &ldquo;Abrahamic&rdquo;, &ldquo;colonialism&rdquo;, &ldquo;Hinduism most progressive religion&rdquo; &#x2014; is that you lose every value you&rsquo;re fighting for, become a loser, and make yourself look like a pvssy in the process. <img src="/img/retardation/GKFNo1XWkAAHieo 1.jpeg" alt="GKFNo1XWkAAHieo 1.jpeg" />
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240402035732.png">img/retardation/Pasted image 20240402035732.png</a>
+<img src="/img/retardation/Pasted image 20240402035732.png" alt="Pasted image 20240402035732.png" />
 </p>
 
 <hr />
@@ -286,7 +286,7 @@ All this sort of argument accomplishes &#x2014; REEEing about &ldquo;Abrahamic&r
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240401223507.png">img/retardation/Pasted image 20240401223507.png</a>
+<img src="/img/retardation/Pasted image 20240401223507.png" alt="Pasted image 20240401223507.png" />
 </p>
 
 <hr />
@@ -304,15 +304,15 @@ Smart RWers can also use this for copypasta. And we can make bots.
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402025200.png">img/pramanaproposal/Pasted image 20240402025200.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402025200.png" alt="Pasted image 20240402025200.png" />
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402035435.png">img/pramanaproposal/Pasted image 20240402035435.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402035435.png" alt="Pasted image 20240402035435.png" />
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402021334.png">img/pramanaproposal/Pasted image 20240402021334.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402021334.png" alt="Pasted image 20240402021334.png" />
 </p>
 
 <hr />
@@ -344,15 +344,15 @@ Here&rsquo;s an incomplete list of primary sources I&rsquo;ve been listing out, 
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402031027.png">img/pramanaproposal/Pasted image 20240402031027.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402031027.png" alt="Pasted image 20240402031027.png" />
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402031101.png">img/pramanaproposal/Pasted image 20240402031101.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402031101.png" alt="Pasted image 20240402031101.png" />
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402033231.png">img/pramanaproposal/Pasted image 20240402033231.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402033231.png" alt="Pasted image 20240402033231.png" />
 </p>
 
 <hr />
@@ -366,7 +366,7 @@ Every RW attempt at develop alternative institutions to mainstream history acade
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240401205922.png">img/retardation/Pasted image 20240401205922.png</a>
+<img src="/img/retardation/Pasted image 20240401205922.png" alt="Pasted image 20240401205922.png" />
 </p>
 
 <hr />
@@ -398,19 +398,19 @@ Or e.g. a single e-girl&rsquo;s remark turning all of H twitter to seethe again
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240402010656.png">img/retardation/Pasted image 20240402010656.png</a>
+<img src="/img/retardation/Pasted image 20240402010656.png" alt="Pasted image 20240402010656.png" />
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240402011813.png">img/retardation/Pasted image 20240402011813.png</a>
+<img src="/img/retardation/Pasted image 20240402011813.png" alt="Pasted image 20240402011813.png" />
 </p>
 
 <p>
-<a href="/img/retardation/Pasted image 20240402012128.png">img/retardation/Pasted image 20240402012128.png</a>
+<img src="/img/retardation/Pasted image 20240402012128.png" alt="Pasted image 20240402012128.png" />
 </p>
 
 <p>
-<a href="/img/retardation/GJwDoWXXwAACXfA.jpeg">img/retardation/GJwDoWXXwAACXfA.jpeg</a>
+<img src="/img/retardation/GJwDoWXXwAACXfA.jpeg" alt="GJwDoWXXwAACXfA.jpeg" />
 </p>
 
 <hr />
@@ -424,7 +424,7 @@ We need an allies list, and an index of confirmed &amp; suspected fake or misrep
 </p>
 
 <p>
-<a href="/img/pramanaproposal/Pasted image 20240402015840.png">img/pramanaproposal/Pasted image 20240402015840.png</a>
+<img src="/img/pramanaproposal/Pasted image 20240402015840.png" alt="Pasted image 20240402015840.png" />
 </p>
 
 <hr />
@@ -448,11 +448,11 @@ Would be useful for Pramana.
 </p>
 
 <p>
-<a href="/img/word_analysis_wisdomlib.png">img/word_analysis_wisdomlib.png</a>
+<img src="/img/word_analysis_wisdomlib.png" alt="word_analysis_wisdomlib.png" />
 </p>
 
 <p>
-<a href="/img/word_analysis_panini_research_tool.png">img/word_analysis_panini_research_tool.png</a>
+<img src="/img/word_analysis_panini_research_tool.png" alt="word_analysis_panini_research_tool.png" />
 </p>
 
 <hr />
@@ -471,7 +471,7 @@ Permission (to have some schizos go through your tweets and stick them to a webs
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
