--- a/xeet/history/sanudasa.html
+++ b/xeet/history/sanudasa.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sānudāsa</title>
@@ -202,7 +202,7 @@ Tales of explorers and merchants often faded into oblivion in Indian literature,
 </p>
 
 <p>
-<a href="/img/sanudasa/F3GkWQvXUAA6BzJ.png">img/sanudasa/F3GkWQvXUAA6BzJ.png</a>
+<img src="/img/sanudasa/F3GkWQvXUAA6BzJ.png" alt="F3GkWQvXUAA6BzJ.png" />
 </p>
 
 <p>
@@ -210,7 +210,7 @@ He is shipwrecked on his journey West. Previously shipwrecked on the island a gi
 </p>
 
 <p>
-<a href="/img/sanudasa/F3GkkVAWsAACKrq.png">img/sanudasa/F3GkkVAWsAACKrq.png</a>
+<img src="/img/sanudasa/F3GkkVAWsAACKrq.png" alt="F3GkkVAWsAACKrq.png" />
 </p>
 
 <p>
@@ -218,7 +218,7 @@ Sānudāsa agrees to marry the half-Greek girl, they make a distress signal, and
 </p>
 
 <p>
-<a href="/img/sanudasa/F3Gmm72X0AALTMW.png">img/sanudasa/F3Gmm72X0AALTMW.png</a>
+<img src="/img/sanudasa/F3Gmm72X0AALTMW.png" alt="F3Gmm72X0AALTMW.png" />
 </p>
 
 <p>
@@ -226,11 +226,11 @@ Sānudāsa makes it to Madurai with the help of a bilingual man, and ultimately 
 </p>
 
 <p>
-<a href="/img/sanudasa/F3GnIo1XoAc8MoZ.png">img/sanudasa/F3GnIo1XoAc8MoZ.png</a>
+<img src="/img/sanudasa/F3GnIo1XoAc8MoZ.png" alt="F3GnIo1XoAc8MoZ.png" />
 </p>
 
 <p>
-<a href="/img/sanudasa/F3Gn2wNWkAAJUds.png">img/sanudasa/F3Gn2wNWkAAJUds.png</a>
+<img src="/img/sanudasa/F3Gn2wNWkAAJUds.png" alt="F3Gn2wNWkAAJUds.png" />
 </p>
 
 <p>
@@ -238,12 +238,12 @@ Here the tale takes a somewhat mythical twist: the merchants travel first to the
 </p>
 
 <p>
-<a href="/img/sanudasa/F3GpUs3XoAI9VpZ.png">img/sanudasa/F3GpUs3XoAI9VpZ.png</a>
+<img src="/img/sanudasa/F3GpUs3XoAI9VpZ.png" alt="F3GpUs3XoAI9VpZ.png" />
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
