--- a/xeet/politics/positive-vision/climate_control.html
+++ b/xeet/politics/positive-vision/climate_control.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Climate Control</title>
@@ -214,7 +214,7 @@ Desalinated water, shade from urban trees.
 </p>
 
 <p>
-<a href="/img/climate_control_1.jpeg">img/climate_control_1.jpeg</a>
+<img src="/img/climate_control_1.jpeg" alt="climate_control_1.jpeg" />
 </p>
 
 <p>
@@ -243,12 +243,12 @@ You wake up every day to post-rain clarity and deciduous trees covered in dew.
 
 
 <p>
-<a href="/img/climate_control_2.jpeg">img/climate_control_2.jpeg</a>
+<img src="/img/climate_control_2.jpeg" alt="climate_control_2.jpeg" />
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
