--- a/xeet/politics/positive-vision/hsr.html
+++ b/xeet/politics/positive-vision/hsr.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>High-speed rail</title>
@@ -218,7 +218,7 @@ Black lines only built after winning TN, KL
 </p>
 
 <p>
-<a href="/img/hsr/hsr1.jpeg">img/hsr/hsr1.jpeg</a>
+<img src="/img/hsr/hsr1.jpeg" alt="hsr1.jpeg" />
 </p>
 
 <p>
@@ -230,12 +230,12 @@ And here&rsquo;s an interactive version, made with xatra: <a href="https://srajm
 </p>
 
 <p>
-<a href="/img/hsr/hsr2.jpeg">img/hsr/hsr2.jpeg</a>
+<img src="/img/hsr/hsr2.jpeg" alt="hsr2.jpeg" />
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
