--- a/xeet/politics/positive-vision/pmc.html
+++ b/xeet/politics/positive-vision/pmc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Private Military Corporations</title>
@@ -222,12 +222,12 @@ Private Military Corporations are the best. @hindookissinger is a genius (and al
 </p>
 
 <p>
-<a href="/img/musk_pmc.png">img/musk_pmc.png</a>
+<img src="/img/musk_pmc.png" alt="musk_pmc.png" />
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
