--- a/xeet/politics/sindoor.html
+++ b/xeet/politics/sindoor.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Operation Sindoor concluding thoughts</title>
@@ -249,7 +249,7 @@ My only regret is that we have but 543 seats to give to the Priest-King.
 </p>
 
 <p>
-<a href="/img/juggling.png">img/juggling.png</a>
+<img src="/img/juggling.png" alt="juggling.png" />
 </p>
 </div>
 </div>
@@ -283,7 +283,7 @@ And complacency among people, so likely won&rsquo;t even ramp up defense product
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
