--- a/xeet/timepass/ashwini_vaishnaw.html
+++ b/xeet/timepass/ashwini_vaishnaw.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ashwini Vaishnaw</title>
@@ -202,12 +202,12 @@ We&rsquo;re going to BVILD so much, you may even get tired of BVILDing. And you&
 </p>
 
 <p>
-<a href="/img/memes/ashwini_vaishnaw.png">img/memes/ashwini_vaishnaw.png</a>
+<img src="/img/memes/ashwini_vaishnaw.png" alt="ashwini_vaishnaw.png" />
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
