--- a/xeet/timepass/prophecy.html
+++ b/xeet/timepass/prophecy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 18:06 -->
+<!-- 2025-05-24 Sat 18:16 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>prophecy</title>
@@ -197,7 +197,7 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">prophecy</h1>
-<pre class="example" id="org2b884c3">
+<pre class="example" id="orgce1e3e0">
 &gt; originate in Maharashtra 
 &gt; immediately gain some Southern holdings 
 &gt; Prosperity &amp; Hindoo unity
@@ -213,7 +213,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 18:06</p>
+<p class="date">Created: 2025-05-24 Sat 18:16</p>
 </div>
 </body>
 </html>
